[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Andrey <andrey.personal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrogram = "^2.0.106"
asyncpg = "^0.29.0"
environs = "^11.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
aiojobs = "^1.2.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
